[Refactor][B][MSA] 카프카 통신 설정